--- a/delivery.html
+++ b/delivery.html
@@ -259,10 +259,303 @@ async function acceptOrder(id){
  });
  loadOrders();
 }
+<!DOCTYPE html>  <html lang="en">  
+<head>  
+<meta charset="UTF-8">  
+<title>Delivery Partner Dashboard</title>  
+<meta name="viewport" content="width=device-width, initial-scale=1.0">  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">  
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">  <style>  
+*{box-sizing:border-box;font-family:Poppins,sans-serif}  
+body{margin:0;background:#eef2f7}  
+.main{max-width:900px;margin:auto;padding:16px}  
+  
+.top{  
+ background:#0f172a;color:#fff;  
+ display:flex;justify-content:space-between;align-items:center;  
+ padding:14px;border-radius:16px  
+}  
+.icon-btn{  
+ background:#2563eb;border:none;color:#fff;  
+ width:44px;height:44px;border-radius:50%;  
+ font-size:20px;cursor:pointer  
+}  
+  
+.card{  
+ background:#fff;margin-top:14px;padding:14px;  
+ border-radius:14px;box-shadow:0 6px 18px rgba(0,0,0,.08)  
+}  
+  
+.order{  
+ display:flex;gap:12px;margin-top:12px  
+}  
+.order img{  
+ width:90px;height:80px;object-fit:cover;border-radius:10px  
+}  
+  
+.badge{  
+ padding:4px 10px;border-radius:20px;  
+ font-size:12px;display:inline-block  
+}  
+.green{background:#dcfce7;color:#166534}  
+.blue{background:#e0f2fe;color:#075985}  
+  
+.btn{  
+ display:inline-flex;align-items:center;gap:6px;  
+ padding:8px 14px;border:none;border-radius:10px;  
+ cursor:pointer;margin-top:8px;font-size:13px  
+}  
+.accept{background:#16a34a;color:#fff}  
+.pickup{background:#f59e0b;color:#fff}  
+.done{background:#2563eb;color:#fff}  
+  
+/* MODALS */  
+.modal{  
+ position:fixed;inset:0;background:rgba(0,0,0,.5);  
+ display:none;align-items:center;justify-content:center;z-index:20  
+}  
+.modal-box{  
+ background:#fff;width:92%;max-width:420px;  
+ border-radius:16px;padding:20px  
+}  
+.modal-box input,select{  
+ width:100%;padding:10px;margin:8px 0;  
+ border-radius:10px;border:1px solid #ccc  
+}  
+</style>  </head>  <body>  <div class="main">    <div class="top">  
+    <h3>🚚 Delivery Partner</h3>  
+    <button class="icon-btn" onclick="openProfile()">  
+      <i class="bi bi-person-circle"></i>  
+    </button>  
+  </div>    <div class="card">  
+    <b>ID:</b> <span id="dbId"></span><br>  
+    <span class="badge green">ACTIVE</span>  
+  </div>    <div id="orders"></div>  
+</div>  <!-- PROFILE MODAL -->  <div class="modal" id="profileModal">  
+ <div class="modal-box">  
+  <h3>👤 Delivery Profile</h3>  
+  <input id="pName" placeholder="Full Name">  
+  <input id="pMobile" placeholder="Mobile Number">  
+  <select id="pVehicle">  
+   <option value="">Vehicle Type</option>  
+   <option value="two_wheeler">Two Wheeler</option>  
+   <option value="three_wheeler">Three Wheeler</option>  
+   <option value="four_wheeler">Four Wheeler</option>  
+  </select>  
+  <input id="pVehicleNo" placeholder="Vehicle Number">  
+  <input id="pCity" placeholder="City">  
+  <button class="btn accept" onclick="saveProfile()">Save Profile</button>  
+  <button class="btn" onclick="closeProfile()">Close</button>  
+ </div>  
+</div>  <!-- DELIVERY CODE MODAL -->  <div class="modal" id="codeModal">  
+ <div class="modal-box">  
+  <h3>🔐 Enter Delivery Code</h3>  
+  <input id="deliveryCodeInput" placeholder="Enter delivery code">  
+  <button class="btn done" onclick="submitDeliveryCode()">Submit</button>  
+  <button class="btn" onclick="closeCodeModal()">Cancel</button>  
+ </div>  
+</div>  <script>  
+const API = "https://shopbacked-vmhs.onrender.com";  
+const DBID = localStorage.getItem("userId");  
+const TOKEN = localStorage.getItem("token");  
+  
+let lastOrders = [];  
+let currentOrderId = null;  
+  
+dbId.innerText = DBID ? DBID.slice(0,8).toUpperCase() : "N/A";  
+  
+/* PROFILE */  
+  
+async function openProfile(){  
+  profileModal.style.display="flex";  
+  
+  try{  
+    const res = await fetch(`${API}/api/delivery/profile/${DBID}`,{  
+      headers:{ "Authorization":"Bearer "+TOKEN }  
+    });  
+  
+    const data = await res.json();  
+    if(!data.profile) return;  
+  
+    const p = data.profile;  
+    pName.value = p.name || "";  
+    pMobile.value = p.mobile || "";  
+    pVehicle.value = p.vehicle || "";  
+    pVehicleNo.value = p.vehicleNo || "";  
+    pCity.value = p.city || "";  
+  
+  }catch(err){  
+    console.error(err);  
+  }  
+}  
+  
+  
+  
+async function saveProfile(){    
+  
+  if(!pMobile.value.trim()){    
+    alert("Mobile number required");    
+    return;    
+  }    
+  
+  const payload = {    
+    deliveryBoyId: DBID,  
+    name: pName.value.trim(),    
+    mobile: pMobile.value.trim(),    
+    vehicle: pVehicle.value,    
+    vehicleNo: pVehicleNo.value.trim(),    
+    city: pCity.value.trim()    
+  };    
+  
+  try{    
+    const res = await fetch(`${API}/api/delivery/profile/save`,{    
+      method:"POST",    
+      headers:{    
+        "Content-Type":"application/json",    
+        "Authorization":"Bearer "+TOKEN    
+      },    
+      body: JSON.stringify(payload)    
+    });    
+  
+    const data = await res.json();    
+  
+    if(data.success){    
+      alert("✅ Profile server par save ho gaya");    
+      window.closeProfile();   // ✅ FIX  
+    }else{    
+      alert("❌ Profile save failed");    
+    }    
+  
+  }catch(err){    
+    console.error(err);    
+    alert("❌ Server error");    
+  }    
+}  
+  
+  
+window.closeProfile = function(){  
+  const modal = document.getElementById("profileModal");  
+  if(modal){  
+    modal.style.display = "none";  
+  }  
+}  
+   
+/* LOAD ORDERS */  
+async function loadOrders(){  
+ try{  
+  const res = await fetch(`${API}/api/orders/delivery/${DBID}`,{  
+    headers:{ Authorization:"Bearer "+TOKEN }  
+  });  
+  const data = await res.json();  
+  // ✅ Only show unassigned orders or assigned to current delivery boy  
+  lastOrders = (data.orders || []).filter(o => !o.deliveryBoyId || o.deliveryBoyId === DBID);  
+  renderOrders(lastOrders);  
+ }catch(err){  
+  orders.innerHTML="<p style='text-align:center;color:red'>Failed to load orders</p>";  
+ }  
+}  
+  
+/* RENDER ORDERS */  
+function renderOrders(list){  
+ if(!list.length){  
+  orders.innerHTML="<p style='text-align:center'>No Orders</p>";  
+  return;  
+ }  
+  
+ orders.innerHTML = list.map(o=>`  
+ <div class="card order">  
+  <img src="${o.productImg}">  
+  <div style="flex:1">  
+   <b>${o.productName}</b><br>  
+   <span class="badge blue">${o.status}</span><br>  
+   <small>${o.statusHistory[o.statusHistory.length-1]?.time ? new Date(o.statusHistory[o.statusHistory.length-1].time).toLocaleString() : ""}</small><br><br>  
+   🏪 <b>Wholesaler:</b> ${o.wholesalerName}<br>  
+   📍 ${o.wholesalerAddress || "Address N/A"}<br>  
+   📞 ${o.wholesalerMobile || "N/A"}<br><br>  
+   🏬 <b>Retailer:</b> ${o.retailerName}<br>  
+   📍 ${o.retailerAddress || "Address N/A"}<br>  
+   📞 ${o.retailerMobile || "N/A"}<br><br>  
+   🚗 <b>Vehicle:</b> ${o.vehicleType==="two_wheeler"?"Two Wheeler":o.vehicleType==="three_wheeler"?"Three Wheeler":o.vehicleType==="four_wheeler"?"Four Wheeler":"N/A"}<br><br>  
+  
+   ${o.status==="confirmed_by_wholesaler"?`<button class="btn accept" onclick="acceptOrder('${o._id}')">Accept</button>`:""}  
+   ${o.status==="delivery_accepted"?`<button class="btn pickup" onclick="pickupOrder('${o._id}')">Pickup</button>`:""}  
+   ${(o.status==="picked_up" || o.status==="delivery_code_generated")?`<button class="btn done" onclick="deliverFlow('${o._id}','${o.status}')">Delivered</button>`:""}  
+  </div>  
+ </div>  
+ `).join("");  
+}  
+  
+/* ACTIONS */  
+async function acceptOrder(id){  
+ const p = JSON.parse(localStorage.getItem("deliveryProfile_"+DBID)||"{}");  
+ await fetch(`${API}/api/orders/${id}/delivery-accept`,{  
+  method:"POST",  
+  headers:{ "Content-Type":"application/json","Authorization":"Bearer "+TOKEN },  
+  body:JSON.stringify({ deliveryBoyId:DBID,deliveryBoyName:p.name||"Delivery Partner",deliveryBoyMobile:p.mobile||"" })  
+ });  
+ loadOrders();  
+}  
 async function pickupOrder(id){
- await fetch(`${API}/api/orders/${id}/pickup`,{ method:"POST",headers:{ "Authorization":"Bearer "+TOKEN }});
- loadOrders();
+try{
+const res = await fetch(${API}/api/orders/${id}/pickup,{
+method:"POST",
+headers:{ "Authorization":"Bearer "+TOKEN }
+});
+
+const data = await res.json();  
+
+if(data.success){  
+  alert("📦 Order picked up");  
+  loadOrders();  
+}else{  
+  alert("❌ Pickup failed");  
 }
+
+}catch(e){
+alert("❌ Server error");
+ }  
+  
+/* DELIVERY FLOW */  
+async function deliverFlow(orderId,status){  
+ const order = lastOrders.find(o=>o._id===orderId);  
+ if(!order) return;  
+  
+ if(!order.deliveryCode){  
+  await fetch(`${API}/api/orders/generate-delivery-code/${orderId}`,{  
+    method:"POST",  
+    headers:{ "Authorization":"Bearer "+TOKEN }  
+  });  
+  alert("Delivery code generated & sent to retailer 📩");  
+  loadOrders();  
+  return;  
+ }  
+  
+ currentOrderId = orderId;  
+ deliveryCodeInput.value="";  
+ codeModal.style.display="flex";  
+}  
+  
+async function submitDeliveryCode(){  
+ const code = deliveryCodeInput.value.trim();  
+ if(!code) return alert("Enter delivery code");  
+  
+ const res = await fetch(`${API}/api/orders/verify-delivery-code/${currentOrderId}`,{  
+  method:"POST",  
+  headers:{ "Content-Type":"application/json","Authorization":"Bearer "+TOKEN },  
+  body:JSON.stringify({ code })  
+ });  
+ const data = await res.json();  
+ alert(data.success?"Delivered Successfully ✅":"Wrong Code ❌");  
+ closeCodeModal();  
+ loadOrders();  
+}  
+  
+function closeCodeModal(){ codeModal.style.display="none"; }  
+  
+/* INIT */  
+loadOrders();  
+setInterval(loadOrders,8000);  
+</script>  </body>  
+</html> 
 
 /* DELIVERY FLOW */
 async function deliverFlow(orderId,status){
