--- a/delivery.html
+++ b/delivery.html
@@ -215,14 +215,14 @@ function renderOrders(list){
    📞 ${o.retailerMobile || "N/A"}<br><br>  
    🚗 <b>Vehicle:</b> ${o.vehicleType==="two_wheeler"?"Two Wheeler":o.vehicleType==="three_wheeler"?"Three Wheeler":o.vehicleType==="four_wheeler"?"Four Wheeler":"N/A"}<br><br>  
   
-   ${o.status==="confirmed_by_wholesaler"
+   ${o.status==="paid"
  ? `<button class="btn accept" onclick="acceptOrder('${o._id}')">Accept</button>` : ""}
 
 ${o.status==="delivery_accepted"
  ? `<button class="btn pickup" onclick="pickupOrder('${o._id}')">Pickup</button>` : ""}
 
 ${o.status==="out_for_delivery"
- ? `<button class="btn done" onclick="deliverFlow('${o._id}')">Delivered</button>` : ""}  
+ ? `<button class="btn done" onclick="deliverFlow('${o._id}')">Delivered</button>` : ""}
   </div>  
  </div>  
  `).join("");  
