--- a/delivery.html
+++ b/delivery.html
@@ -215,14 +215,9 @@ function renderOrders(list){
    📞 ${o.retailerMobile || "N/A"}<br><br>  
    🚗 <b>Vehicle:</b> ${o.vehicleType==="two_wheeler"?"Two Wheeler":o.vehicleType==="three_wheeler"?"Three Wheeler":o.vehicleType==="four_wheeler"?"Four Wheeler":"N/A"}<br><br>  
   
-   ${o.status==="paid"
- ? `<button class="btn accept" onclick="acceptOrder('${o._id}')">Accept</button>` : ""}
-
-${o.status==="delivery_accepted"
- ? `<button class="btn pickup" onclick="pickupOrder('${o._id}')">Pickup</button>` : ""}
-
-${o.status==="out_for_delivery"
- ? `<button class="btn done" onclick="deliverFlow('${o._id}')">Delivered</button>` : ""}
+   ${o.status==="confirmed_by_wholesaler"?`<button class="btn accept" onclick="acceptOrder('${o._id}')">Accept</button>`:""}  
+   ${o.status==="delivery_accepted"?`<button class="btn pickup" onclick="pickupOrder('${o._id}')">Pickup</button>`:""}  
+   ${(o.status==="picked_up" || o.status==="delivery_code_generated")?`<button class="btn done" onclick="deliverFlow('${o._id}','${o.status}')">Delivered</button>`:""}  
   </div>  
  </div>  
  `).join("");  
@@ -238,26 +233,10 @@ async function acceptOrder(id){
  });  
  loadOrders();  
 }  
-async function pickupOrder(id){
-  try{
-    const res = await fetch(`${API}/api/orders/${id}/pickup`,{
-      method:"POST",
-      headers:{ "Authorization":"Bearer "+TOKEN }
-    });
-
-    const data = await res.json();
-
-    if(data.success){
-      alert("📦 Order picked up");
-      loadOrders();
-    }else{
-      alert("❌ Pickup failed");
-    }
-
-  }catch(e){
-    alert("❌ Server error");
-  }
-}
+async function pickupOrder(id){  
+ await fetch(`${API}/api/orders/${id}/pickup`,{ method:"POST",headers:{ "Authorization":"Bearer "+TOKEN }});  
+ loadOrders();  
+}  
   
 /* DELIVERY FLOW */  
 async function deliverFlow(orderId,status){  
@@ -300,4 +279,4 @@ function closeCodeModal(){ codeModal.style.display="none"; }
 loadOrders();  
 setInterval(loadOrders,8000);  
 </script>  </body>  
-</html> 
+</html>  
